made a transaction class to handle tranactions cashout works minor fixes to gui changed register to handle transaction objects transaction stores the list of objects, handles total instead of register register now just keeps the transactions in order